--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,15 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.deansquirrel</groupId>
+  <parent>
+    <groupId>com.github.deansquirrel</groupId>
+    <artifactId>tools-parent</artifactId>
+    <version>0.0.2</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
   <artifactId>tools-http</artifactId>
 <!--   <version>0.0.0</version>-->
-  <version>0.0.2</version>
+  <version>0.1.0</version>
   <name>tools-http</name>
   <url>https://github.com/Deansquirrel/jtools-http</url>
   <description>tools http</description>
@@ -41,13 +46,11 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jul-to-slf4j</artifactId>
-      <version>1.7.32</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
-      <version>3.14.9</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
